# seeds

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml
.beads/: issues.jsonl  metadata.json
.beads/export/: config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl
.beads/hooks/: pre-commit
.github/workflows/: ci.yml
.seeds/: seeds.jsonl
docs/: ai-workflow-research-2026-03.md  decisionTools.markdown  deliberation-tools-research.md  immediateissues.md  initialideas.md  intent-build-overview.md  one-liners.md  possible_names.md  what_i_know_about_adr.md  what_i_know_about_beads.md  what_i_know_about_deliberation_and_decision_making.md  what_i_know_about_rfc.md
plans/: discussion.md  mvp.md  question-migration.md  spec_first_pass.md
scripts/: setup-branch-protection.sh
src/seeds/: __init__.py  cli.py  db.py  export.py  models.py  prime.py  web.py
src/seeds/templates/: base.html  detail.html  list.html  questions.html
tests/: __init__.py  conftest.py  test_cli.py  test_db.py  test_export.py  test_models.py  test_web.py
