[project]
name = "seeds"
version = "0.1.0"
description = "Git-backed deliberation capture for ideas that need time to grow"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.0",
    "flask>=3.0.0",
]

[project.scripts]
seeds = "seeds.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/seeds"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
