[project]
name = "seeds"
version = "0.1.0"
description = "Git-backed deliberation capture for ideas that need time to grow"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Ryan Duryea", email = "aguynamedryan@gmail.com" },
]
keywords = [
    "deliberation",
    "decision-making",
    "idea-tracker",
    "cli",
    "ai-agent",
    "knowledge-management",
    "brainstorming",
    "seed",
    "exploration",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.1.0",
    "flask>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/outcomesinsights/seeds"
Repository = "https://github.com/outcomesinsights/seeds"
Issues = "https://github.com/outcomesinsights/seeds/issues"

[project.scripts]
seeds = "seeds.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/seeds"]

[tool.uv]
dev-dependencies = [
    "mypy>=1.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false

[tool.pytest.ini_options]
testpaths = ["tests"]
